Creazione routes iniziali